--- a/src/Spryker/CustomerGroup/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CustomerGroup/data/translation/Zed/de_DE.csv
@@ -1,4 +1,6 @@
 "Add Customer Group","Kundengruppe hinzufügen"
+"Add a Customer Group","Kundengruppe hinzufügen"
+"Add a customer group","Kundengruppe hinzufügen"
 "Assigned customers","Zugeordnete Kunden"
 "Available customers","Verfügbare Kunden"
 "Back to Customer Groups","Zurück zu Kundengruppen"
@@ -6,9 +8,14 @@
 "Delete Customer Group","Kundengruppe löschen"
 Description,Beschreibung
 "Edit Customer Group","Kundengruppe bearbeiten"
+"Edit customer group","Kundengruppe bearbeiten"
 "List Customer Groups","Liste der Kundengruppen"
 Save,Speichern
 "Select all","Alle auswählen"
 "Selected customers to assign","Ausgewählte Kunden, die zugeordnet werden sollen"
 "Selected customers to de-assign","Ausgewählte Kunden, deren Zuordnung rückgängig gemacht werden soll"
 "View Customer Group","Kundengruppe anzeigen"
+"View customer group","Kundengruppe anzeigen"
+Customer groups,Kundengruppen
+Customer Groups,Kundengruppen
+Select,Auswählen
