--- a/src/Spryker/MerchantGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/MerchantGui/data/translation/Zed/en_US.csv
@@ -1,6 +1,6 @@
 "Add Merchant","Add Merchant"
 "Back to Merchants","Back to Merchants"
-"Edit Merchant:","Edit Merchant:"
+"Edit Merchant","Edit Merchant"
 "List of Merchants","List of merchants"
 "Overview of Merchants","Overview of Merchants"
 Save,Save
