--- a/src/Spryker/Oms/data/translation/Zed/en_US.csv
+++ b/src/Spryker/Oms/data/translation/Zed/en_US.csv
@@ -3,3 +3,6 @@ Customer,Customer
 "Order ID","Order ID"
 "process display","process display"
 "Total Price","Total Price"
+Processes,Processes
+Oms,Oms
+"Statemachine preview","Statemachine preview"
