--- a/src/Spryker/MerchantRelationshipGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/MerchantRelationshipGui/data/translation/Zed/en_US.csv
@@ -8,3 +8,16 @@ Confirm,Confirm
 "Overview of Merchant relation","Overview of Merchant relation"
 Save,Save
 "Select Company","Select Company"
+"Merchant Name","Merchant Name"
+"Assigned Business Units","Assigned Business Units"
+"Edit Merchant Relation","Edit Merchant Relation"
+"Merchant Relations","Merchant Relations"
+Merchant,Merchant
+Merchants,Merchants
+"Merchant relation created successfully.","Merchant relation created successfully."
+"Merchant relation has not been created.","Merchant relation has not been created."
+"Merchant relation deleted successfully.","Merchant relation deleted successfully."
+"Merchant relation updated successfully.","Merchant relation updated successfully."
+"Merchant relation is not found.","Merchant relation is not found."
+"Merchant Relationship with id %s doesn't exists.","Merchant Relationship with id %s doesn't exists."
+"Select merchant","Select merchant"
