--- a/src/Spryker/Storage/data/translation/Zed/en_US.csv
+++ b/src/Spryker/Storage/data/translation/Zed/en_US.csv
@@ -1,3 +1,6 @@
 "All Keys","All Keys"
 "Drop timestamps","Drop timestamps"
 "Number of entries:","Number of entries:"
+"Storage overview","Storage overview"
+"Storage keys","Storage keys"
+Key,Key
