translate user control

--- a/src/Spryker/User/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/User/data/translation/Zed/de_DE.csv
@@ -6,3 +6,8 @@ Save,Speichern
 Update,Update
 User,Benutzer
 Users List,Liste der Benutzer
+Create new User,Neuen Benutzer Erstellen
+Create user, Benutzer Erstellen
+Password,Passwort
+Edit User,Benutzer Bearbeiten
+Update user,Benutzer Bearbeiten
