--- a/src/Spryker/Acl/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Acl/data/translation/Zed/de_DE.csv
@@ -10,3 +10,9 @@ Create,Erstellen
 Role,Rolle
 Rule,Regel
 Save,Speichern
+Role list,Liste der Rollen
+Roles,Rollen
+Edit Role,Rolle Bearbeiten
+Groups,Gruppen
+Edit Group, Gruppen Bearbeiten
+"Create new Group","Neuen Gruppe erstellen"
