--- a/src/Spryker/CmsBlockGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CmsBlockGui/data/translation/Zed/de_DE.csv
@@ -20,3 +20,10 @@ Template:,Vorlage:
 "Valid to:","Gültig bis (exklusive):"
 "View CMS Block:","CMS-Block anzeigen:"
 yes,Ja
+View CMS Block,CMS-Blöck Anzeigen
+"Edit Block","Block Bearbeiten"
+Edit Placeholder,Platzhalter Bearbeiten
+View Block,Blöck Anzeigen
+Blocks,Blocken
+"Edit CMS Block","CMS-Block bearbeiten"
+"Edit CMS Block Glossary","Blockglossar bearbeiten"
