--- a/src/Spryker/CmsGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CmsGui/data/translation/Zed/de_DE.csv
@@ -54,3 +54,6 @@ Selected Version,Ausgewählte Version
 General,Allgemeine
 Valid from,Gültig ab (inklusive):
 Valid to,Gültig bis (exklusive):
+Pages,Seiten
+"View CMS Page","CMS-Seite anzeigen"
+"Edit CMS Page","CMS-Seite bearbeiten"
