--- a/src/Spryker/CompanyGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CompanyGui/data/translation/Zed/de_DE.csv
@@ -3,3 +3,6 @@
 "List of Companies","Liste der Firmen"
 "Overview of Companies","Übersicht der Firmen"
 Save,Speichern
+Companies,Firmen
+Create Company,Firma Erstellen
+Edit Company,Firma Bearbeiten
