--- a/src/Spryker/CompanyUnitAddressGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CompanyUnitAddressGui/data/translation/Zed/de_DE.csv
@@ -5,3 +5,6 @@
 "List of Company Unit Addresses","Liste der Adressen der Geschäftseinheiten"
 "Overview of Company Unit Addresses","Übersicht der Adressen der Geschäftseinheiten"
 Save,Speichern
+Company Unit Addresses,Adressen der Geschäftseinheiten
+Create Company Unit Address,Adresse der Geschäftseinheit Erstellen
+"Edit Company Unit Address","Adresse der Geschäftseinheit Bearbeiten"
