--- a/src/Spryker/Discount/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Discount/data/translation/Zed/de_DE.csv
@@ -53,3 +53,4 @@ Custom code, Benutzerdefinierter Code
 Generate,Generierte
 Created At,Erstellt Am
 View discount,Rabatt Anzeigen
+View Discount,Rabatt Anzeigen
