--- a/src/Spryker/MerchantGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/MerchantGui/data/translation/Zed/de_DE.csv
@@ -4,3 +4,6 @@
 "List of Merchants","Liste der Händler"
 "Overview of Merchants","Übersicht der Händler"
 Save,Speichern
+Merchants,Händler
+Create Merchant,Händler Erstellen
+Edit Merchant,Händler Bearbeiten
