--- a/src/Spryker/MerchantRelationshipGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/MerchantRelationshipGui/data/translation/Zed/de_DE.csv
@@ -8,3 +8,5 @@ Confirm,Bestätigen
 "Overview of Merchant relation","Übersicht der Händlerbeziehung"
 Save,Speichern
 "Select Company","Firma auswählen"
+Merchant Relations,Handelsbeziehungen
+Edit Merchant Relation,Händlerbeziehung Bearbeiten
