--- a/src/Spryker/MerchantRelationshipSalesOrderThresholdGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/MerchantRelationshipSalesOrderThresholdGui/data/translation/Zed/de_DE.csv
@@ -3,3 +3,4 @@
 "Merchant relationships",Handelsbeziehungen
 Save,Speichern
 "Soft Threshold",Mindesbestellwert
+Edit Merchant Relationhip Threshold,Schwellenwert für die Händlerbeziehung Bearbeiten
