--- a/src/Spryker/NavigationGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/NavigationGui/data/translation/Zed/de_DE.csv
@@ -8,3 +8,7 @@
 Save,Speichern
 "Save order","Bestellung speichern"
 Search,Suche
+Overview of Navigation Elements,Übersicht der Navigationselementen
+List of navigation elements, Liste der Navigationselementen
+Edit Navigation Element,Navigationselement Bearbeiten
+Edit Navigation Element:,Navigationselement Bearbeiten:
