--- a/src/Spryker/ProductAttributeGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductAttributeGui/data/translation/Zed/de_DE.csv
@@ -20,3 +20,10 @@ Save,Speichern
 "Superattribute","Superattribute"
 Values,Werte
 "You can add new values by pressing ""Enter"" after each element","Sie können neue Werte hinzufügen, indem Sie nach jedem Element ""Enter"" drücken"
+View Product Attribute,Produktattribut Anzeigen
+View Attribute,Attribut anzeigen
+Predefined values,Vordefinierte Werte
+Edit Product Attribute,Produktattribut Bearbeiten
+Product Attributes,Produktattributen
+Attributes,Attributen
+Create a Product Attribute,Produktattribut Hinzufügen
