--- a/src/Spryker/ProductCategory/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductCategory/data/translation/Zed/de_DE.csv
@@ -2,3 +2,4 @@
 "Assign products to category","Produkte einer Kategorie zuordnen"
 "List of categories","Liste der Kategorien"
 Save,Speichern
+"Assign Products to Category","Produkten einer Kategorie zuordnen"
