--- a/src/Spryker/ProductListGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductListGui/data/translation/Zed/de_DE.csv
@@ -11,3 +11,9 @@ Name,Name
 Save,Speichern
 Selected,Ausgewählt
 SKU,SKU
+Product Lists,Produktlisten
+"Create Product List","Produktliste erstellen"
+"Add List","Liste Hinzufügen"
+Assign Products,Produkte Zuordnen
+Assign Categories,Kategorien Zuordnen
+Overview of Product lists,Übersicht der Produktlisten
