--- a/src/Spryker/ProductPackagingUnitGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductPackagingUnitGui/data/translation/Zed/de_DE.csv
@@ -2,3 +2,5 @@
 "Create Packaging Type","Verpackungsart erstellen"
 Save,Speichern
 Translations,Übersetzungen
+Packaging Types,Verpackungsarten
+Edit Packaging Type, Verpackungsart Bearbeiten
