--- a/src/Spryker/ProductRelation/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductRelation/data/translation/Zed/de_DE.csv
@@ -12,3 +12,12 @@ Save,Speichern
 "Select product","Produkt auswählen"
 "Selected product","Ausgewähltes Produkt"
 Sku:,Sku:
+Product Relations,Produktbeziehungen
+Product relations,Produktbeziehungen
+"Relation type",Relationsart
+Add Product Relations,Produktbeziehungen Hinzufügen
+Create new Product Relation,Produktbeziehungen Hinzufügen
+View relations,Beziehungen anzeigen
+View Product Relation,Beziehung Anzeigen
+Edit Product Relations,Beziehungen Bearbeiten
+Edit Product Relation,Beziehung Bearbeiten
