--- a/src/Spryker/ProductSearch/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductSearch/data/translation/Zed/de_DE.csv
@@ -21,3 +21,9 @@ Deactivate all,Alle Deaktivieren
 Filter preferences,Filtereinstellungen
 Filter Preferences,Filtereinstellungen
 View filter,Filter Anzeigen
+Search Preferences,Suchpräferenzen
+Search preferences,Suchpräferenzen
+Edit Search Preferences,Suchpräferenzen Bearbeiten
+Edit search preferences,Suchpräferenzen Bearbeiten
+Edit Filter,Filter Bearbeiten
+Edit filter,Filter Bearbeiten
