--- a/src/Spryker/ProductSetGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductSetGui/data/translation/Zed/de_DE.csv
@@ -30,3 +30,7 @@ Submit,Absenden
 Title,Titel
 URL,URL
 View,Ansicht
+Product Sets,Produktsets
+Images,Bilden
+View Product Set,Produktset Anzeigen
+Edit Product Set,Produktset Bearbeiten
