--- a/src/Spryker/SalesReclamation/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/SalesReclamation/data/translation/Zed/de_DE.csv
@@ -19,3 +19,6 @@ State,Zustand
 "Sub total",Zwischensumme
 "Unit Price",Stückpreis
 "Variant Details",Variantendetails
+Reclamations,Reklamationen
+List of Reclamations,Liste der Reklamationen
+View reclamation,Reklamation Anzeigen
