--- a/src/Spryker/Tax/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Tax/data/translation/Zed/de_DE.csv
@@ -28,3 +28,6 @@ Tax sets,Steuersätze
 "Updated at","Aktualisiert am"
 "View Tax Rate:","Steuerrate anzeigen:"
 "View Tax Set:","Steuersatz anzeigen:"
+Taxes,Steueren
+"View Tax Rate","Steuerrate anzeigen"
+"View Tax Set","Steuersatz anzeigen"
