--- a/src/Spryker/CompanyBusinessUnitGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CompanyBusinessUnitGui/data/translation/Zed/de_DE.csv
@@ -3,3 +3,6 @@
 "List of Company Business Units","Liste der Geschäftseinheiten"
 "Overview of Company Business Units","Übersicht der Geschäftseinheiten"
 Save,Speichern
+Company Units,Geschäftseinheiten
+Create Company Business Unit, Geschäftseinheit Erstellen
+Edit Company Business Unit,Geschäftseinheit Bearbeiten
