--- a/src/Spryker/ProductManagement/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductManagement/data/translation/Zed/de_DE.csv
@@ -25,3 +25,6 @@ Save,Speichern
 "There is no super attribute defined. <a href=""%url%"">Define super attributes</a> in order to be able to create variants.","Es ist kein Superattribut definiert. <a href=""%url%"">Definieren Sie Super-Attribute</a>, um Varianten anlegen zu können."
 "View Product Abstract","Abstraktes Produkt anzeigen"
 "View Product Concrete","Konkretes Produkt anzeigen"
+Variants,Varianten
+Image,Bild
+View Product,Produkt Anzeigen
