CC-248: added some dummy translations.

--- a/src/Spryker/Category/data/translation/Zed/en_US.csv
+++ b/src/Spryker/Category/data/translation/Zed/en_US.csv
@@ -27,3 +27,7 @@ View,View
 "Visible in the category tree:","Visible in the category tree:"
 yes,Yes
 "Yes, I am sure","Yes, I am sure"
+"Root nodes list","Root nodes list"
+"Parent","Parent"
+"Additional Parents","Additional Parents"
+"-Select value-","-Select value-"
