--- a/src/Spryker/CmsBlockGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CmsBlockGui/data/translation/Zed/de_DE.csv
@@ -27,3 +27,29 @@ View Block,Blöck Anzeigen
 Blocks,Blocken
 "Edit CMS Block","CMS-Block bearbeiten"
 "Edit CMS Block Glossary","Blockglossar bearbeiten"
+
+"HERE IS Google Translation STARTED","HERE IS Google Translation STARTED"
+"Block Id","Block Id"
+Template,Vorlage
+Stores,Speichern
+"Store relation", "Beziehung speichern"
+Name, Name
+"Valid from", "Gültig ab"
+"Valid to", "Gültig bis"
+"Categories: top", "Kategorien: oben"
+"Categories: middle", "Kategorien: Mitte"
+"Categories: bottom", "Kategorien: unten"
+"Invalid data provided.", "Ungültige Daten angegeben"
+"Selected template doesn't exist anymore.", "Die ausgewählte Vorlage existiert nicht mehr."
+"CMS Block was created successfully.", "CMS-Block wurde erfolgreich erstellt."
+"Selected template doesn't exist anymore", "Die ausgewählte Vorlage existiert nicht mehr"
+"CMS Block was updated successfully.", "CMS-Block wurde erfolgreich aktualisiert."
+"CMS Block was deactivated successfully.", "CMS-Block wurde erfolgreich deaktiviert."
+"CMS Block was deactivated successfully.", "CMS-Block wurde erfolgreich deaktiviert."
+"Selected template doesn't exist anymore", "Die ausgewählte Vorlage existiert nicht mehr"
+"Placeholder translations successfully updated.", "Platzhalterübersetzungen wurden erfolgreich aktualisiert."
+"Content Management","Content Management"
+"No records","Keine Aufzeichnungen"
+"Product list",Produktliste
+"Category list",Kategorienliste
+Content,Inhalt
