--- a/src/Spryker/CmsBlockGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/CmsBlockGui/data/translation/Zed/en_US.csv
@@ -39,3 +39,8 @@ Name, Name
 "CMS Block was deactivated successfully.", "CMS Block was deactivated successfully."
 "Selected template doesn't exist anymore", "Selected template doesn't exist anymore"
 "Placeholder translations successfully updated.", "Placeholder translations successfully updated."
+"Content Management","Content Management"
+"No records","No records"
+"Product list","Product list"
+"Category list","Category list"
+Content,Content
