--- a/src/Spryker/CompanyRoleGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/CompanyRoleGui/data/translation/Zed/en_US.csv
@@ -12,3 +12,10 @@
 "You are trying to delete company role","You are trying to delete company role"
 "It will be deleted from everywhere","It will be deleted from everywhere"
 "Company role deletion confirmation","Company role deletion confirmation"
+"Company Account","Company Account"
+"Company Name","Company Name"
+"Company Roles","Company Roles"
+"Edit Company Role","Edit Company Role"
+"Create Company Role","Create Company Role"
+"Is Default","Is Default"
+"Select company","Select company"
