--- a/src/Spryker/CompanyUnitAddressGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/CompanyUnitAddressGui/data/translation/Zed/en_US.csv
@@ -14,3 +14,7 @@ Save,Save
 "Company unit address create failed.","Company unit address create failed."
 "Company unit address has been successfully updated.","Company unit address has been successfully updated."
 "Company unit address update failed.","Company unit address update failed."
+"Addition to address","Addition to address"
+"Labels","Labels"
+"Zipcode","Zipcode"
+Street,Street
