--- a/src/Spryker/Development/data/translation/Zed/en_US.csv
+++ b/src/Spryker/Development/data/translation/Zed/en_US.csv
@@ -57,3 +57,5 @@ Application,Application
 "Project module","Project module"
 "Module overview","Module overview"
 Development,Development
+Stability,Stability
+"Architecture Sniffer","Architecture Sniffer"
