--- a/src/Spryker/FileManagerGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/FileManagerGui/data/translation/Zed/de_DE.csv
@@ -15,3 +15,7 @@ Save,Speichern
 "View file","Datei anzeigen"
 File Tree,Dateibaum
 Сonfirm,Bestätigt
+
+"File List","Dateiliste"
+"File Manager","Dateimanager"
+"MIME Type Settings","MIME-Typeinstellungen"
