--- a/src/Spryker/ManualOrderEntryGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/ManualOrderEntryGui/data/translation/Zed/en_US.csv
@@ -23,3 +23,12 @@ Submit,Submit
 Tax,Tax
 "Unit Gross Price","Unit Gross Price"
 Vouchers,Vouchers
+"Manual Order Entry","Manual Order Entry"
+"Order Source","Order Source"
+"Select Products","Select Products"
+"Select Customer","Select Customer"
+"Store and Currency","Store and Currency"
+"Added Items","Added Items"
+"Add Voucher","Add Voucher"
+"Billing same as shipping","Billing same as shipping"
+"Add customer addresses","Add customer addresses"
