--- a/src/Spryker/ProductManagement/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductManagement/data/translation/Zed/de_DE.csv
@@ -28,3 +28,4 @@ Save,Speichern
 Variants,Varianten
 Image,Bild
 View Product,Produkt Anzeigen
+"The product [%s] was saved successfully.", "Das Produkt [%s] wurde erfolgreich gespeichert."
