--- a/src/Spryker/ProductSearch/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductSearch/data/translation/Zed/de_DE.csv
@@ -27,3 +27,19 @@ Edit Search Preferences,Suchpräferenzen Bearbeiten
 Edit search preferences,Suchpräferenzen Bearbeiten
 Edit Filter,Filter Bearbeiten
 Edit filter,Filter Bearbeiten
+
+"HERE IS Google Translation STARTED","HERE IS Google Translation STARTED"
+"Include for full text","Für Volltext einschließen"
+"Include for full text boosted","Include für Volltext angehoben"
+"Include for suggestion","Zum Vorschlag hinzufügen"
+"Include for completion","Zum Abschluss einschließen"
+"Full text","Voller Text"
+"Full text boosted","Volltext angehoben"
+"Suggestion terms","Vorschläge für Vorschläge"
+"Completion terms","Abschlussbedingungen"
+"Filter position","Filterposition"
+"Filter name *","Filtername *"
+"multi-select","Mehrfachauswahl"
+"single-select","Einzelauswahl"
+"range","Angebot"
+"View Filter","Filter anzeigen"
