--- a/src/Spryker/ProductSearch/data/translation/Zed/en_US.csv
+++ b/src/Spryker/ProductSearch/data/translation/Zed/en_US.csv
@@ -14,3 +14,17 @@ Save,Save
 "Synchronize filter preferences","Synchronize filter preferences"
 "Synchronize search preferences","Synchronize search preferences"
 Translations,Translations
+"Include for full text","Include for full text"
+"Include for full text boosted","Include for full text boosted"
+"Include for suggestion","Include for suggestion"
+"Include for completion","Include for completion"
+"Full text","Full text"
+"Full text boosted","Full text boosted"
+"Suggestion terms","Suggestion terms"
+"Completion terms","Completion terms"
+"Filter position","Filter position"
+"Filter name *","Filter name *"
+"multi-select","multi-select"
+"single-select","single-select"
+"range","range"
+"View Filter","View Filter"
