--- a/src/Spryker/Tax/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Tax/data/translation/Zed/de_DE.csv
@@ -9,6 +9,7 @@ Edit,Bearbeiten
 "Edit Tax Rate:","Steuerrate bearbeiten:"
 "Edit Tax Rate","Steuerrate bearbeiten"
 "Edit Tax Set:","Steuerset bearbeiten:"
+"Edit Tax Set","Steuerset bearbeiten"
 "List of tax rates","Liste der Steuerraten"
 "List of tax sets","Liste der Steuersätze"
 N/A,k.A.
