--- a/src/Spryker/Tax/data/translation/Zed/en_US.csv
+++ b/src/Spryker/Tax/data/translation/Zed/en_US.csv
@@ -8,6 +8,7 @@ Delete,Delete
 Edit,Edit
 "Edit Tax Rate:","Edit Tax Rate:"
 "Edit Tax Set:","Edit Tax Set:"
+"Edit Tax Set","Edit Tax Set"
 "List of tax rates","List of tax rates"
 "List of tax sets","List of tax sets"
 N/A,n/a
