--- a/src/Spryker/Acl/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Acl/data/translation/Zed/de_DE.csv
@@ -16,3 +16,5 @@ Edit Role,Rolle Bearbeiten
 Groups,Gruppen
 Edit Group, Gruppen Bearbeiten
 "Create new Group","Neuen Gruppe erstellen"
+
+"Users Control","Benutzersteuerung"
