--- a/src/Spryker/Category/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Category/data/translation/Zed/de_DE.csv
@@ -35,3 +35,9 @@ Visible,Sichtbar
 yes,Ja
 "Yes, I am sure","Ja, ich bin mir sicher"
 Categories,Kategorien
+
+"HERE IS Google Translation STARTED","HERE IS Google Translation STARTED"
+"Root nodes list","Liste der Wurzelknoten"
+"Parent","Elternteil"
+"Additional Parents","Zusätzliche Eltern"
+"-Select value-","-Wähle Wert-"
