--- a/src/Spryker/CompanyUnitAddressGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CompanyUnitAddressGui/data/translation/Zed/de_DE.csv
@@ -8,3 +8,18 @@ Save,Speichern
 Company Unit Addresses,Adressen der Geschäftseinheiten
 Create Company Unit Address,Adresse der Geschäftseinheit Erstellen
 "Edit Company Unit Address","Adresse der Geschäftseinheit Bearbeiten"
+
+"HERE IS Google Translation STARTED","HERE IS Google Translation STARTED"
+"Company Unit Address Id","Company Unit Address Id"
+"Number","Number"
+"Addition to address","Addition to address"
+"Create Company Unit Address","Create Company Unit Address"
+"Back to Company Unit Addresses","Back to Company Unit Addresses"
+"Company unit address has been successfully created.","Company unit address has been successfully created."
+"Company unit address create failed.","Company unit address create failed."
+"Company unit address has been successfully updated.","Company unit address has been successfully updated."
+"Company unit address update failed.","Company unit address update failed."
+"Addition to address","Addition to address"
+"Labels","Labels"
+"Zipcode","Zipcode"
+Street,Street
