--- a/src/Spryker/Dashboard/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Dashboard/data/translation/Zed/de_DE.csv
@@ -1,1 +1,5 @@
-Dashboard,Dashboard
+"HERE IS Google Translation STARTED","HERE IS Google Translation STARTED"
+Dashboard,Instrumententafel
+"Count orders","Aufträge zählen"
+"Status orders","Statusbestellungen"
+"Top Orders","Top-Bestellungen"
