--- a/src/Spryker/ManualOrderEntryGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ManualOrderEntryGui/data/translation/Zed/de_DE.csv
@@ -23,3 +23,14 @@ Submit,Absenden
 Tax,Steuer
 "Unit Gross Price","Bruttopreis pro Einheit"
 Vouchers,Gutscheine
+
+"HERE IS Google Translation STARTED","HERE IS Google Translation STARTED"
+"Manual Order Entry","Manuelle Auftragserfassung"
+"Order Source","Bestellquelle"
+"Select Products","Wählen Sie Produkte aus"
+"Select Customer","Wählen Sie Kunden aus"
+"Store and Currency","Laden und Währung"
+"Added Items","Hinzugefügte Artikel"
+"Add Voucher","Gutschein hinzufügen"
+"Billing same as shipping","Rechnungsstellung wie Versand"
+"Add customer addresses","Kundenadressen hinzufügen"
