--- a/src/Spryker/Storage/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Storage/data/translation/Zed/de_DE.csv
@@ -1,3 +1,6 @@
 "All Keys","Alle Keys"
 "Drop timestamps","Drop timestamps"
 "Number of entries:","Anzahl der Einträge:"
+
+Maintenance,Instandhaltung
+"Storage","Lager"
